--- a/app/views/registers/new.html.erb
+++ b/app/views/registers/new.html.erb
@@ -1,3 +1,24 @@
-<h1>New Register</h1>
-
-<%= render 'form' %>
+<section class="top">
+  <div class="contanier-fluid">
+    <div class="row">
+      <div class="col-md-4 col-md-offset-4">
+        <%= image_tag 'logo.png', class: 'img-responsive' %>
+      </div>
+    </div>
+  </div>
+</section>
+<section class="form">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-12">
+        <h1>Register</h1>
+        <hr>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-md-6 col-md-offset-3">
+        <%= render 'form' %>
+      </div>
+    </div>
+  </div>
+</section>
