--- a/app/views/registers/new.html.erb
+++ b/app/views/registers/new.html.erb
@@ -1,7 +1,7 @@
 <section class="top">
   <div class="contanier-fluid">
     <div class="row">
-      <div class="col-md-4 col-md-offset-4">
+      <div class="col-md-4 col-sm-4 col-md-offset-4 col-sm-offset-4">
         <%= image_tag 'logo.png', class: 'img-responsive' %>
       </div>
     </div>
