--- a/app/views/pages/index.html.haml
+++ b/app/views/pages/index.html.haml
@@ -1,3 +1,6 @@
+%section.top
+
+
 %h1 Home
 = form_for attendee do |f|
   = f.label :first_name
@@ -5,5 +8,11 @@
 
   = f.label :last_name
   = f.text_field :last_name
-  
+
+  = f.label :email
+  = f.text_field :email
+
+  = f.label :phone
+  = f.text_field :phone
+
   = f.submit
