--- a/app/views/pages/index.html.haml
+++ b/app/views/pages/index.html.haml
@@ -1,4 +1,5 @@
 %section.top
+  = inline_svg '3l_logo.svg', class: 'logo'
 
 %section.form
   .container
@@ -11,19 +12,30 @@
           .row
             .col-xs-12.col-sm-6.col-sm-offset-3
               %h4 First Name:
-              = f.text_field :first_name, class: 'form-control', required: true
+              = f.text_field :first_name, class: 'form-control'
           .row
             .col-xs-12.col-sm-6.col-sm-offset-3
               %h4 Last Name:
-              = f.text_field :last_name, class: 'form-control', required: true
+              = f.text_field :last_name, class: 'form-control'
           .row
             .col-xs-12.col-sm-6.col-sm-offset-3
               %h4 Email:
-              = f.text_field :email, class: 'form-control', required: true, type: 'email'
+              = f.text_field :email, class: 'form-control'
           .row
             .col-xs-12.col-sm-6.col-sm-offset-3
               %h4 Phone:
-              = f.text_field :phone, class: 'form-control', required: true, type: 'tel'
+              = f.text_field :phone, class: 'form-control phone'
           .row.form-actions
             .col-xs-12.col-sm-6.col-sm-offset-3
               = f.submit 'Submit', class: 'btn btn-default'
+
+:javascript
+  $("#new_attendee").validate({
+      rules: {
+      "attendee[first_name]": {required: true},
+      "attendee[last_name]": {required: true},
+      "attendee[email]": {required: true, email: true},
+      "attendee[phone]": {required: true}
+    }
+  });
+  $('.phone').mask('(000) 000-0000');
