--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -27,6 +27,15 @@ h4 { font-family: $lato; }
   }
 }
 
+.logo {
+  max-width: 350px;
+  position: absolute;
+  left: 0;
+  right: 0;
+  margin: 0 auto;
+  top: 25%;
+}
+
 .top {
   min-height: 600px;
   background-image: image-url("main-1.jpg");
