Completed thanks page

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -46,6 +46,8 @@ h4 { font-family: $lato; }
 
 .tcenter { text-align: center; }
 
+.thanks { padding: 300px 0; }
+
 .form { padding: 50px 0; }
 .form-actions { margin: 30px 0 0; text-align: center; }
 
