--- a/app/views/pages/thanks.html.haml
+++ b/app/views/pages/thanks.html.haml
@@ -3,6 +3,7 @@
     .row
       .col-xs-12
         %h1.tcenter
-          Thank You for Registering!
+          Thank You for your feedback!
         .form-actions
           = link_to 'GO BACK!', root_path, class: 'btn btn-default'
+          = link_to 'Visit Site', "http://3l.solmiami.org", class: 'btn btn-default'
