Added registration form

--- a/app/views/pages/index.html.haml
+++ b/app/views/pages/index.html.haml
@@ -6,65 +6,66 @@
     .row
       .col-xs-12
         %h1.tcenter
-          Testimony
+          -# Testimony
 
-        = form_for testimony, html: { class: 'form-horizontal' } do |f|
+          -# = form_for testimony, html: { class: 'form-horizontal' } do |f|
+            .row
+              .col-xs-12.col-sm-3.col-sm-offset-3
+                %h4 First Name:
+                = f.text_field :first_name, class: 'form-control'
+              .col-xs-12.col-sm-3
+                %h4 Last Name:
+                = f.text_field :last_name, class: 'form-control'
+            .row
+              .col-xs-12.col-sm-6.col-sm-offset-3
+                %h4 Email:
+                = f.text_field :email, class: 'form-control'
+            .row
+              .col-xs-12.col-sm-6.col-sm-offset-3
+                %h4 Testimony:
+                = f.text_area :testimony, rows: 5, class: 'form-control'
+            %hr
+            .row
+              .col-xs-12.col-sm-6.col-sm-offset-3
+                %h4
+                  Comments:
+                %em (Feedback on event)
+                = f.text_area :comments, rows: 5, class: 'form-control'
+            .row.form-actions
+              .col-xs-12.col-sm-6.col-sm-offset-3
+                = f.submit 'Submit', class: 'btn btn-default'
+
+          Register
+
+        = form_for attendee, html: { class: 'form-horizontal' } do |f|
           .row
-            .col-xs-12.col-sm-3.col-sm-offset-3
+            .col-xs-12.col-sm-6.col-sm-offset-3
               %h4 First Name:
-              = f.text_field :first_name, class: 'form-control'
-            .col-xs-12.col-sm-3
+              = f.text_field :first_name, class: 'form-control', required: true
+          .row
+            .col-xs-12.col-sm-6.col-sm-offset-3
               %h4 Last Name:
-              = f.text_field :last_name, class: 'form-control'
+              = f.text_field :last_name, class: 'form-control', required: true
           .row
             .col-xs-12.col-sm-6.col-sm-offset-3
               %h4 Email:
-              = f.text_field :email, class: 'form-control'
+              = f.text_field :email, class: 'form-control', type: 'email', required: true
           .row
             .col-xs-12.col-sm-6.col-sm-offset-3
-              %h4 Testimony:
-              = f.text_area :testimony, rows: 5, class: 'form-control'
-          %hr
-          .row
-            .col-xs-12.col-sm-6.col-sm-offset-3
-              %h4
-                Comments:
-              %em (Feedback on event)
-              = f.text_area :comments, rows: 5, class: 'form-control'
+              %h4 Phone:
+              = f.text_field :phone, class: 'form-control phone'
           .row.form-actions
             .col-xs-12.col-sm-6.col-sm-offset-3
               = f.submit 'Submit', class: 'btn btn-default'
 
-        -#   Register
-        -#
-        -# = form_for attendee, html: { class: 'form-horizontal' } do |f|
-        -#   .row
-        -#     .col-xs-12.col-sm-6.col-sm-offset-3
-        -#       %h4 First Name:
-        -#       = f.text_field :first_name, class: 'form-control'
-        -#   .row
-        -#     .col-xs-12.col-sm-6.col-sm-offset-3
-        -#       %h4 Last Name:
-        -#       = f.text_field :last_name, class: 'form-control'
-        -#   .row
-        -#     .col-xs-12.col-sm-6.col-sm-offset-3
-        -#       %h4 Email:
-        -#       = f.text_field :email, class: 'form-control'
-        -#   .row
-        -#     .col-xs-12.col-sm-6.col-sm-offset-3
-        -#       %h4 Phone:
-        -#       = f.text_field :phone, class: 'form-control phone'
-        -#   .row.form-actions
-        -#     .col-xs-12.col-sm-6.col-sm-offset-3
-        -#       = f.submit 'Submit', class: 'btn btn-default'
-
 :javascript
-  $("#new_testimony").validate({
-      rules: {
-      "testimony[first_name]": {required: true},
-      "testimony[last_name]": {required: true},
-      "testimony[email]": {required: true, email: true},
-      "testimony[testimony]": {required: true}
-    }
-  });
--# $('.phone').mask('(000) 000-0000');
+  $('.phone').mask('(000) 000-0000');
+
+-# $("#new_testimony").validate({
+-#     rules: {
+-#     "testimony[first_name]": {required: true},
+-#     "testimony[last_name]": {required: true},
+-#     "testimony[email]": {required: true, email: true},
+-#     "testimony[testimony]": {required: true}
+-#   }
+-# });
